2009-Oct-7      caf     Version to support logbook entries and filename convention.  Tag V01-03-00.
2009-Sep-30     weaver/cpo Put in kludge to avoid corrupt xtc files where we don't do a fixup for dropped BLD contributions.
2009-Sep-29 tomytsai    Add rceProxy library
2009-Sep-29 weaver  Fixed segment level startup "race".  Protected against configuration TC buffer
            overflows.
2009-Sep-24 cpo Support for acqiris calibrations.  Also made outoforder damage persistent in acqiris until executable restarted.  Tag V01-02-00.
2009-Sep-11 weaver  Added payload to transitions from control level (for recording configuration).
            Capped printout from event-builders.
>>>>>>> 1.39
2009-Sep-10 tomytsai  Add Epics data collector level 1 (segment) node library in pds/epicsArch.
2009-Aug-22 weaver  Fixed overflow of nbins in MonDescXXX.  Added method for
            removing groups from MonCds.
2009-Aug-18 weaver  Tag V01-01-00.  Added Waveform and Image classes to mon with no
            integrating options.
2009-Aug-15 weaver  Tag V01-00-03.  Removed MsgAppliance usage.  Adjusted Acqiris
            OutOfSync checking for master EVG rate tolerances and fiducial
            count rollover.
2009-Aug-12 weaver  Tag V01-00-02.  Added timeout for control level transitions.
2009-Aug-7  weaver  Fix bug when using procSrv where camera frame sizes are reduced.
2009-Jul-22 weaver  Tag V01-00-01.  Uses additional vectoring field in TimeStamp.
            Added qualifiers to PartitionControl transitions.
2009-Jul-14 weaver  Tag V01-00-00.  Consistent with pdsdata V00-05-00.  Added calibration
            cycles.  Added sequencing in the Evr (nevents or time).  Source levels
            now identify themselves by DetInfo to the ControlLevel during platform
            discovery.  Recorded transitions are broadcast (AllEvents, AllRecorders
            multicast group) to all nodes.
2009-Jul-13     cpo     Fix bug where AcqManager was putting the same task on the queue