@@ -1,3 +1,4 @@
+2009-Oct-8	weaver  Changed event-builder to only use Sequence::fiducials() from BLD and no other Seq fields.
 2009-Oct-7      caf     Version to support logbook entries and filename convention.  Tag V01-03-00.
 2009-Sep-30     weaver/cpo Put in kludge to avoid corrupt xtc files where we don't do a fixup for dropped BLD contributions.
 2009-Sep-29 tomytsai    Add rceProxy library
